fixed firebase config and upload endpoint

--- a/upload.html
+++ b/upload.html
@@ -46,15 +46,15 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
     import { getAuth } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBujiz5R1qEHcLvlMp9fQIViIMuWs3gRZk",
-      authDomain: "cam-attendance-a4881.firebaseapp.com",
-      projectId: "cam-attendance-a4881",
-      storageBucket: "cam-attendance-a4881.firebasestorage.app",
-      messagingSenderId: "344849505667",
-      appId: "1:344849505667:web:9a8ddb0a009f458fca2ab6",
-      measurementId: "G-RLBS140J6Y"
-    };
+const firebaseConfig = {
+        apiKey: "AIzaSyBujiz5R1qEHcLvlMp9fQIViIMuWs3gRZk",
+        authDomain: "cam-attendance-a4881.firebaseapp.com",
+        projectId: "cam-attendance-a4881",
+        storageBucket: "cam-attendance-a4881.firebasestorage.app",
+        messagingSenderId: "344849505667",
+        appId: "1:344849505667:web:9a8ddb0a009f458fca2ab6",
+        measurementId: "G-RLBS140J6Y",
+      };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
