--- a/upload.html
+++ b/upload.html
@@ -50,7 +50,7 @@ const firebaseConfig = {
         apiKey: "AIzaSyBujiz5R1qEHcLvlMp9fQIViIMuWs3gRZk",
         authDomain: "cam-attendance-a4881.firebaseapp.com",
         projectId: "cam-attendance-a4881",
-        storageBucket: "cam-attendance-a4881.firebasestorage.app",
+        storageBucket: "cam-attendance-a4881.appspot.com",
         messagingSenderId: "344849505667",
         appId: "1:344849505667:web:9a8ddb0a009f458fca2ab6",
         measurementId: "G-RLBS140J6Y",
