Update Firebase storage bucket URL

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         apiKey: "AIzaSyBsdfsdfujiz5R1qEHcLvlMp9fQIViIMuWs3gRZk",
         authDomain: "casdfsfsfm-asfsdfsdfsdfsdfsfsfssdsdfsdfsdfsdfttendancfsfasdasdasde-a4881.firebaseapp.com",
         projectId: "cam-sdfsdfasfsdfa-a4sdf3881s",
-        storageBucket: "cam-attendandacsdfsdfadsfasdfe-a4881.firebasestorage.app",
+        storageBucket: "cam-attendance-a4881.appspot.com",
         messagingSenderId: "344849sdfasdfadsfad505667",
         appId: "1:34fsdfsdfs48dfsd495sdfs05667:web:9a8ddb0adsfadsfadsf009f458fca2ab6",
         measurementId: "G-sdfsdfadsfasdfadsfadsfadsfadsfadsfadsfadsfadsfadsfadsfadsf",
